migrated validation in gateway